# pet_adoption_api_akso/src/routes/PetRoute.ts
@@ -3,7 +3,8 @@ import { store } from "../middlewares/multer.js";
 import {
   petGet,
   petUpload,
-  petDelete
+  petDelete,
+  petUpdate
 } from "../controllers/PetController.js";
 import { check } from "express-validator";
 const router = express.Router();
@@ -11,7 +12,7 @@ const router = express.Router();
 router.route("/pets")
 .get(petGet)
 .post(
-  store.array("images", 12),
+  store.array("images", 1200),
   [
     check("name").notEmpty().withMessage("name can't be empty"),
     check("breed").notEmpty().withMessage("breed can't be empty"),
@@ -26,4 +27,8 @@ router.route("/pets")
 router
   .route("/pets/:id")
   .delete(petDelete)
+  .put(
+    store.array("images", 1200),
+    petUpdate
+  );
 export default router;
