# pet_adoption_api_akso/swagger/api.yaml
@@ -37,9 +37,7 @@ components:
         isAvailable:
           type: boolean
           enum: [true,false]
-      required:
-        - images
-        - fileType
+    
 tags:
   - name: Donations
     description: Operation about Donations
@@ -335,7 +333,37 @@ paths:
       responses:
         '200':
           description: Success
+        "405":
+          description: Invalid value
   /api/pets/{petId}:
+    put:
+      tags:
+        - Pets
+      summary: Update a pet
+      operationId: updatePetId
+      parameters:
+      - name: petId
+        in: path
+        description: ID of pet to return
+        required: true
+        schema:
+          type: string
+      requestBody:
+        content:
+          multipart/form-data:
+            schema:
+              $ref: '#/components/schemas/ImageUpload'
+              parameters:
+                - in: formData
+                  name: images
+                  type: file
+                  description: The image to upload
+      responses:
+        "200":
+          description: Success
+        "405":
+          description: Invalid value   
+
     delete:
       tags:
         - Pets
@@ -351,5 +379,5 @@ paths:
       responses:
         "200":
           description: Deleted Successfully!
-        "400":
+        "405":
           description: Invalid value
